force-app/main/default/objects/MESSENGER__Message_Config__c/MESSENGER__Message_Config__c.object-meta.xml
<CustomObject>
    <label>Message Config</label>
    <nameField>
        <displayFormat>MSG-{0000}</displayFormat>
        <label>Message Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Message Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>