force-app/main/default/objects/MESSENGER__Message_Config__c/fields/MESSENGER__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>