force-app/main/default/objects/MESSENGER__Message_Config__c/fields/MESSENGER__Message_Body__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__Message_Body__c</fullName>
    <label>Message Body</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>