force-app/main/default/objects/MESSENGER__Message_Config__c/fields/MESSENGER__Message_Type__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__Message_Type__c</fullName>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
                <default>true</default>
                <label>SMS</label>
            </value>
            <value>
                <fullName>Voice Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>