force-app/main/default/objects/MESSENGER__Message_Config__c/fields/MESSENGER__Name__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>