force-app/main/default/objects/MESSENGER__Message_Config__c/fields/MESSENGER__Order_Status__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__Order_Status__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Produced</fullName>
            </value>
            <value>
                <fullName>Storage in Branch</fullName>
            </value>
            <value>
                <fullName>Delivery to Customer</fullName>
            </value>
            <value>
                <fullName>Pick Up by Customer expected</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Invoice sent</fullName>
            </value>
            <value>
                <fullName>Invoice paid</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Re-Opened for Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>