force-app/main/default/objects/MESSENGER__Message_Config__c/fields/MESSENGER__Template_Name__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__Template_Name__c</fullName>
    <label>Template Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>