force-app/main/default/objects/MESSENGER__Message_Config__c/validationRules/MESSENGER__Message_Subject_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>MESSENGER__Message_Subject_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT( MESSENGER__Message_Type__c )== &apos;Email&apos;, ISBLANK(MESSENGER__Message_Subject__c))</errorConditionFormula>
    <errorDisplayField>MESSENGER__Message_Subject__c</errorDisplayField>
    <errorMessage>You have to enter Message Subject when Message Type is Email</errorMessage>
</ValidationRule>