force-app/main/default/objects/MESSENGER__Message_Config__c/listViews/MESSENGER__All.listView-meta.xml
<ListView>
    <fullName>MESSENGER__All</fullName>
    <columns>MESSENGER__Message_Subject__c</columns>
    <columns>MESSENGER__Message_Type__c</columns>
    <columns>NAME</columns>
    <columns>MESSENGER__Order_Status__c</columns>
    <columns>MESSENGER__Template_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>